# tr1pd

./: .dockerignore  .travis.yml  Cargo.toml  Dockerfile  README.md  audit.sh  docker-entry.sh  tr1pd.service
benches/: bench.rs
ci/: Dockerfile  Dockerfile.reprotest  build.sh  reprotest.sh  setup.sh  test.sh  travis_setup.sh
contrib/: tr1pd-sysuser.conf
contrib/openrc/: tr1pd.confd  tr1pd.initd
docs/: docker.md  tr1pd-tmpfiles.conf  tr1pd.service
examples/: boxxy.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_block.rs
src/: blocks.rs  config.rs  lib.rs  recipe.rs  rpc.rs  spec.rs  wire.rs
src/cli/: common.rs  mod.rs  tr1pctl.rs  tr1pd.rs
src/crypto/: mod.rs  ring.rs
src/engine/: mod.rs
src/rpc/: mod.rs  wire.rs
src/sandbox/: capabilities.rs  chroot.rs  mod.rs  pledge.rs  seccomp.rs  syscalls.rs
src/storage/: disk.rs  memory.rs  mod.rs
src/tests/: blocks.rs  config.rs  mod.rs  spec.rs  storage.rs  wire.rs
src/tests/crypto/: mod.rs  ring.rs
src/tests/mocks/: storage.rs
