[package]
name = "tr1pd"
version = "0.1.0"
description = "work in progress"
authors = ["kpcyrd <git@rxv.cc>"]
license = "AGPL-3.0"
repository = "https://github.com/kpcyrd/tr1pd"
categories = ["command-line-utilities"]

[[bin]]
name = "tr1pd"
path = "src/bin/tr1pd.rs"
doc = false
test = false

[[bin]]
name = "tr1pctl"
path = "src/bin/tr1pctl.rs"
test = false

[badges]
travis-ci = { repository = "kpcyrd/tr1pd" }

[dependencies]
nom = "3.2"
clap = "2"
error-chain = "0.11"
sodiumoxide = "0.0.16"
sha3 = "0.7"

log = "0.4"
env_logger = "0.4"
colored = "1.6"
human-size = "0.2"

scaproust = { git = "https://github.com/blabaere/scaproust.git" }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
pseudo = "0.0.3"
