[package]
name = "tr1pd"
version = "0.2.0"
description = "tamper resistant audit log"
authors = ["kpcyrd <git@rxv.cc>"]
license = "AGPL-3.0"
repository = "https://github.com/kpcyrd/tr1pd"
categories = ["command-line-utilities"]

[[bin]]
name = "tr1pd"
path = "src/bin/tr1pd.rs"
doc = false
test = false

[[bin]]
name = "tr1pctl"
path = "src/bin/tr1pctl.rs"
test = false

[badges]
travis-ci = { repository = "kpcyrd/tr1pd" }

[dependencies]
nom = "3.2"
clap = "2"
error-chain = "0.11"
sodiumoxide = "0.0.16"
sha3 = "0.7"
libc = "0.2"

log = "0.4"
env_logger = "0.4"
colored = "1.6"
human-size = "0.2"

scaproust = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"

[target.'cfg(target_os="linux")'.dependencies]
seccomp-sys = "0.1.2"

[dev-dependencies]
pseudo = "0.0.3"
boxxy = "0.3"
